--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                 Outline
         </button>
         <button class=""> <!--button class here-->
+                Pills
+        </button>
+        <button class=""> <!--button class here-->
                 Destructive
         </button>
         <button class=""> <!--button class here-->
