- Styled default and outline buttons

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 <body>
     <div class="space-y-4 flex flex-col items-center mt-10">
-        <button class=""> <!--button class here-->
+        <button class="bg-blue-700 text-white font-semibold py-2 px-6 rounded-md hover:bg-blue-900 transition duration-1000 ease-out cursor-pointer"> <!--button class here-->
                 Default
         </button>
-        <button class=""> <!--button class here-->
+        <button class="border border-white/30 text-white font-semibold py-2 px-6 rounded-md hover:bg-white/30 transition duration-300 ease-out cursor-pointer"> <!--button class here-->
                 Outline
         </button>
         <button class=""> <!--button class here-->
