--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <button class=""> <!--button class here-->
                 Destructive
         </button>
-        <button class=""> <!--button class here-->
+        <button class="text-white font-semibold py-2 px-6 rounded-md hover:bg-zinc-600 transition duration-300 ease-out cursor-pointer"> <!--button class here-->
                 Ghost
         </button>
-        <button class=""> <!--button class here-->
+        <button class=" text-white font-semibold py-2 px-2 rounded-md bg-zinc-900 hover:bg-zinc-600 transition duration-300 ease-out cursor-pointer"> <!--button class here-->
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-left"><path d="m15 18-6-6 6-6"/></svg>
         </button>
         <a class=""> <!--button class here-->
