--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <button class="border border-zinc-600 text-white font-semibold py-2 px-6 rounded-md hover:bg-zinc-600 transition duration-300 ease-out cursor-pointer"> <!--button class here-->
                 Outline
         </button>
-        <button class=""> <!--button class here-->
+        <button class="font-[Inter] bg-[#1C2FAE] text-[1.6rem] text-[white] px-20 py-4 rounded-full font-bold hover:bg-[#132285] ease-out transition delay-80"> <!--button class here-->
                 Pills
         </button>
-        <button class=""> <!--button class here-->
+        <button class="font-[Inter] bg-[#A62921] text-[1.6rem] text-[white] px-12 py-4 rounded-[15px] font-bold hover:bg-[#7C1D17] ease-out transition delay-80"> <!--button class here-->
                 Destructive
         </button>
         <button class="text-white font-semibold py-2 px-6 rounded-md hover:bg-zinc-600 transition duration-300 ease-out cursor-pointer"> <!--button class here-->
