4 buttons with state colors

--- a/index.html
+++ b/index.html
@@ -61,6 +61,24 @@
                         </svg>
                         Login with Email
                 </button>
+                <div class="flex-row">
+                        <button
+                                class="bg-[#49A773] py-3 px-4 font-semibold rounded-md text-sm hover:bg-[#3E9163] transition duration-200 ease-out cursor-pointer mr-2">
+                                Success
+                        </button>
+                        <button
+                                class="bg-[#08B2FF] py-3 px-4 font-semibold rounded-md text-sm hover:bg-[#069ADE] transition duration-200 ease-out cursor-pointer mr-2">
+                                Info
+                        </button>
+                        <button
+                                class="bg-[#FEC109] py-3 px-4 font-semibold rounded-md text-sm hover:bg-[#DDA807] transition duration-200 ease-out cursor-pointer mr-2">
+                                Warning
+                        </button>
+                        <button
+                                class="bg-[#E95E5E] py-3 px-4 font-semibold rounded-md text-sm hover:bg-[#DD5859] transition duration-200 ease-out cursor-pointer mr-2">
+                                Error
+                        </button>
+                </div>
         </div>
 </body>
 
