8 Outline buttons with state colors

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </style>
 </head>
 
-<body>
+<body class="bg-[#1E2329]">
         <div class="space-y-4 flex flex-col items-center mt-10">
                 <button
                         class="bg-blue-700 text-white font-semibold py-2 px-6 rounded-md hover:bg-blue-900 transition duration-1000 ease-out cursor-pointer">
@@ -76,6 +76,41 @@
                         </button>
                         <button
                                 class="bg-[#E95E5E] py-3 px-4 font-semibold rounded-md text-sm hover:bg-[#DD5859] transition duration-200 ease-out cursor-pointer mr-2">
+                                Error
+                        </button>
+                </div>
+
+                <div class="flex-row">
+                        <button
+                                class="py-3 px-4 border border-[#A7ADBA]-100 text-[#A7ADBA] bg-[#1E2329] rounded-md text-sm font-semibold hover:text-[#1E2329] hover:bg-[#A7ADBA] transition duration-30 ease-out cursor-pointer mr-2">
+                                Default
+                        </button>
+                        <button
+                                class="py-3 px-4 border border-[#666EDD]-100 text-[#666EDD] bg-[#1E2329] rounded-md text-sm font-semibold hover:text-[#1E2329] hover:bg-[#666EDD] transition duration-30 ease-out cursor-pointer mr-2">
+                                Primary
+                        </button>
+                        <button
+                                class="py-3 px-4 border border-[#DD54B8]-100 text-[#DD54B8] bg-[#1E2329] rounded-md text-sm font-semibold hover:text-[#1E2329] hover:bg-[#DD54B8] transition duration-30 ease-out cursor-pointer mr-2">
+                                Secondary
+                        </button>
+                        <button
+                                class="py-3 px-4 border border-[#25AF9F]-100 text-[#25AF9F] bg-[#1E2329] rounded-md text-sm font-semibold hover:text-[#1E2329] hover:bg-[#25AF9F] transition duration-30 ease-out cursor-pointer mr-2">
+                                Accent
+                        </button>
+                        <button
+                                class="py-3 px-4 border border-[#069ADE]-100 text-[#069ADE] bg-[#1E2329] rounded-md text-sm font-semibold hover:text-[#1E2329] hover:bg-[#069ADE] transition duration-30 ease-out cursor-pointer mr-2">
+                                Info
+                        </button>
+                        <button
+                                class="py-3 px-4 border border-[#3E9163]-100 text-[#3E9163] bg-[#1E2329] rounded-md text-sm font-semibold hover:text-[#1E2329] hover:bg-[#3E9163] transition duration-30 ease-out cursor-pointer mr-2">
+                                Success
+                        </button>
+                        <button
+                                class="py-3 px-4 border border-[#DDA807]-100 text-[#DDA807] bg-[#1E2329] rounded-md text-sm font-semibold hover:text-[#1E2329] hover:bg-[#DDA807] transition duration-30 ease-out cursor-pointer mr-2">
+                                Warning
+                        </button>
+                        <button
+                                class="py-3 px-4 border border-[#DD5859]-100 text-[#DD5859] bg-[#1E2329] rounded-md text-sm font-semibold hover:text-[#1E2329] hover:bg-[#DD5859] transition duration-30 ease-out cursor-pointer mr-2">
                                 Error
                         </button>
                 </div>
