--- a/index.html
+++ b/index.html
@@ -34,9 +34,14 @@
                 <div class="bg-zinc-800 min-h-screen">
                         <div class="dark:text-white">Default Badge</div>
                         <div class="space-y-4 flex flex-col items-center mt-10">
-                                <span class="px-2 py-1 text-xs font-medium">Badge</span>
-                                <!--Other Default Badges-->
-                                <span class=""></span>
+                                <span class="px-2 py-1 text-xs font- bg-blue-900 rounded-sm text-blue-300">Default</span>
+                                <span class="px-2 py-1 text-xs font-medium bg-gray-900 rounded-sm text-gray-300">Dark</span>
+                                <span class="px-2 py-1 text-xs font-medium bg-red-900 rounded-sm text-red-300">Red</span>
+                                <span class="px-2 py-1 text-xs font-medium bg-green-900 rounded-sm text-green-300">Green</span>
+                                <span class="px-2 py-1 text-xs font-medium bg-yellow-900 rounded-sm text-yellow-300">Yellow</span>
+                                <span class="px-2 py-1 text-xs font-medium bg-indigo-900 rounded-sm text-indigo-300">Indigo</span>
+                                <span class="px-2 py-1 text-xs font-medium bg-purple-900 rounded-sm text-purple-300">Purple</span>
+                                <span class="px-2 py-1 text-xs font-medium bg-pink-900 rounded-sm text-pink-300">Pink</span>
                         </div>
                 </div>
         </div>
