--- a/index.html
+++ b/index.html
@@ -23,28 +23,57 @@
                                 <span class=""></span>
                         </div>
                 </div>
-                <div class="bg-black min-h-screen">
+                <div class="bg-[#1E2329] min-h-screen">
                         <div class="dark:text-white">Dark Mode</div>
                         <div class="space-y-4 flex flex-col items-center mt-10">
-                                <span class="px-2 py-1 text-xs font-medium dark:text-white">Badge</span>
-                                <!--Other Dark Badges-->
-                                <span class=""></span>
+                                <span
+                                        class="px-2 py-1 text-xs font-semibold text-gray-500 bg-gray-500/10 rounded-sm border border-gray-500">Badge
+                                </span>
+                                <span
+                                        class="px-2 py-1 text-xs font-semibold text-red-400 bg-red-400/10 rounded-sm border border-red-400">Badge
+                                </span>
+                                <span
+                                        class="px-2 py-1 text-xs font-semibold text-yellow-500 bg-yellow-500/10 rounded-sm border border-yellow-500">Badge
+                                </span>
+                                <span
+                                        class="px-2 py-1 text-xs font-semibold text-green-500 bg-green-500/10 rounded-sm border border-green-500">Badge
+                                </span>
+                                <span
+                                        class="px-2 py-1 text-xs font-semibold text-blue-500 bg-blue-500/10 rounded-sm border border-blue-500">Badge
+                                </span>
+                                <span
+                                        class="px-2 py-1 text-xs font-semibold text-indigo-500 bg-indigo-500/10 rounded-sm border border-indigo-500">Badge
+                                </span>
+                                <span
+                                        class="px-2 py-1 text-xs font-semibold text-purple-500 bg-purple-500/10 rounded-sm border border-purple-500">Badge
+                                </span>
+                                <span
+                                        class="px-2 py-1 text-xs font-semibold text-pink-500 bg-pink-500/10 rounded-sm border border-pink-500">Badge
+                                </span>
                         </div>
                 </div>
                 <div class="bg-zinc-800 min-h-screen">
                         <div class="dark:text-white">Default Badge</div>
                         <div class="space-y-4 flex flex-col items-center mt-10">
-                                <span class="px-2 py-1 text-xs font- bg-blue-900 rounded-sm text-blue-300">Default</span>
-                                <span class="px-2 py-1 text-xs font-medium bg-gray-900 rounded-sm text-gray-300">Dark</span>
-                                <span class="px-2 py-1 text-xs font-medium bg-red-900 rounded-sm text-red-300">Red</span>
-                                <span class="px-2 py-1 text-xs font-medium bg-green-900 rounded-sm text-green-300">Green</span>
-                                <span class="px-2 py-1 text-xs font-medium bg-yellow-900 rounded-sm text-yellow-300">Yellow</span>
-                                <span class="px-2 py-1 text-xs font-medium bg-indigo-900 rounded-sm text-indigo-300">Indigo</span>
-                                <span class="px-2 py-1 text-xs font-medium bg-purple-900 rounded-sm text-purple-300">Purple</span>
-                                <span class="px-2 py-1 text-xs font-medium bg-pink-900 rounded-sm text-pink-300">Pink</span>
+                                <span
+                                        class="px-2 py-1 text-xs font-medium bg-blue-900 rounded-sm text-blue-300">Default</span>
+                                <span
+                                        class="px-2 py-1 text-xs font-medium bg-gray-900 rounded-sm text-gray-300">Dark</span>
+                                <span
+                                        class="px-2 py-1 text-xs font-medium bg-red-900 rounded-sm text-red-300">Red</span>
+                                <span
+                                        class="px-2 py-1 text-xs font-medium bg-green-900 rounded-sm text-green-300">Green</span>
+                                <span
+                                        class="px-2 py-1 text-xs font-medium bg-yellow-900 rounded-sm text-yellow-300">Yellow</span>
+                                <span
+                                        class="px-2 py-1 text-xs font-medium bg-indigo-900 rounded-sm text-indigo-300">Indigo</span>
+                                <span
+                                        class="px-2 py-1 text-xs font-medium bg-purple-900 rounded-sm text-purple-300">Purple</span>
+                                <span
+                                        class="px-2 py-1 text-xs font-medium bg-pink-900 rounded-sm text-pink-300">Pink</span>
                         </div>
                 </div>
         </div>
-        </body>
+</body>
 
 </html>
