--- a/index.html
+++ b/index.html
@@ -18,16 +18,37 @@
                 <div class="bg-white min-h-screen">
                         <div>Light Mode</div>
                         <div class="space-y-4 flex flex-col items-center mt-10">
-                                <span class="px-2 py-1 text-xs font-medium">Badge</span>
-                                <!--Other Light Badges-->
-                                <span class=""></span>
+                                <span
+                                        class="px-2 py-1 text-xs font-semibold text-gray-600 bg-gray-500/10 rounded-sm border border-gray-400">Badge
+                                </span>
+                                <span
+                                        class="px-2 py-1 text-xs font-semibold text-red-900 bg-red-400/10 rounded-sm border border-red-300">Badge
+                                </span>
+                                <span
+                                        class="px-2 py-1 text-xs font-semibold text-yellow-900 bg-yellow-500/10 rounded-sm border border-yellow-400">Badge
+                                </span>
+                                <span
+                                        class="px-2 py-1 text-xs font-semibold text-green-800 bg-green-500/10 rounded-sm border border-green-300">Badge
+                                </span>
+                                <span
+                                        class="px-2 py-1 text-xs font-semibold text-blue-800 bg-blue-500/10 rounded-sm border border-blue-300">Badge
+                                </span>
+                                <span
+                                        class="px-2 py-1 text-xs font-semibold text-indigo-700 bg-indigo-500/10 rounded-sm border border-indigo-300">Badge
+                                </span>
+                                <span
+                                        class="px-2 py-1 text-xs font-semibold text-purple-600 bg-purple-500/10 rounded-sm border border-purple-300">Badge
+                                </span>
+                                <span
+                                        class="px-2 py-1 text-xs font-semibold text-pink-800 bg-pink-500/10 rounded-sm border border-pink-300">Badge
+                                </span>
                         </div>
                 </div>
                 <div class="bg-[#1E2329] min-h-screen">
                         <div class="dark:text-white">Dark Mode</div>
                         <div class="space-y-4 flex flex-col items-center mt-10">
                                 <span
-                                        class="px-2 py-1 text-xs font-semibold text-gray-500 bg-gray-500/10 rounded-sm border border-gray-500">Badge
+                                        class="px-2 py-1 text-xs font-semibold text-gray-500 bg-gray-500/10 rounded-sm border border-gray-300">Badge
                                 </span>
                                 <span
                                         class="px-2 py-1 text-xs font-semibold text-red-400 bg-red-400/10 rounded-sm border border-red-400">Badge
